# i4w_callapi

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.rs  client.rs  icinga.rs  main.rs  ps.rs  restapiv1.rs
