[package]
name = "i4w_callapi"
version = "0.1.0"
authors = ["Tobias Deiminger <tobias.deiminger@posteo.de>"]
license = "MIT"
edition = "2018"

[[bin]]
bench = false
path = "src/main.rs"
name = "call_api_check"

[dependencies]
clap = "2.9"
indexmap = { version = "1.6", features = ["serde-1"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"